--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "angularx-qrcode": "^18.0.2",
     "firebase": "^10.14.1",
     "ionicons": "^7.4.0",
     "rxjs": "~7.8.0",
